# rust-web-start

./: .env.example  Cargo.toml  README.md
migrations/: 20230720072411_init.up.sql
src/: errors.rs  handler.rs  main.rs  modle.rs  schema.rs
